# reelbit

./: .env  .gitignore  Anchor.toml  Cargo.toml  README.md  index.html  package-lock.json  package.json  tailwind.config.ts
apps/api/: package.json
apps/api/src/: distributionCron.ts  dividendStore.ts  holderDividendCron.ts  index.ts  lpHarvestCron.ts  migration.ts  themeStore.ts  tradingApi.ts
apps/casino/app/: page.tsx
apps/fun/: package.json
programs/casino-grr-vault/: Cargo.toml
programs/distribution/: Cargo.toml
programs/graduation-detector/: Cargo.toml
programs/harvester/: Cargo.toml
programs/jackpot-pool/: Cargo.toml
programs/legal-reserve/: Cargo.toml
programs/lp-vault/: Cargo.toml
programs/shareholder-pool/: Cargo.toml
programs/token-launch/: Cargo.toml
programs/token-launch/src/: errors.rs  lib.rs  state.rs
programs/token-launch/src/instructions/: buy_tokens.rs  launch_slot.rs  mod.rs  sell_tokens.rs
scripts/: init-platform.cjs  setup-devnet.sh
src/: App.tsx  index.css
src/components/: EarningsSimulator.tsx  FAQSection.tsx  Footer.tsx  HeroSection.tsx  Navbar.tsx  ProblemSection.tsx  SlotDemoSection.tsx  SlotReelAnimation.tsx  SolutionSection.tsx  WaitlistSection.tsx
src/pages/: ConfirmPage.tsx  Index.tsx
supabase/: config.toml
supabase/migrations/: 20260222131022_7e99124f-8be9-49ab-b92f-f5129ed42595.sql  20260225021105_d638c280-cd87-4d5d-8e71-a69b91d4a13a.sql  20260225112338_300ce489-b617-4afe-81e9-effae7c6f098.sql  20260225135040_074ec16e-02ca-4d10-8bc8-17c7bf64e18d.sql
tests/: token-launch.test.cjs
(+32 files in other folders)
