[workspace]
members = [
    "programs/token-launch",
    "programs/graduation-detector",
    "programs/lp-vault",
    "programs/harvester",
    "programs/distribution",
    "programs/shareholder-pool",
    "programs/jackpot-pool",
    "programs/casino-grr-vault",
    "programs/legal-reserve"
]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
