[package]
name = "token-launch"
version = "0.1.0"
description = "ReelBit Token Launch Program — creates SPL token, seeds Meteora DLMM pool, enforces 5% wallet cap"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_launch"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
